--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ body h1 {
   font-size: 36px;
   font-weight: 700;
   line-height: 45px;
+  margin-bottom: 2px;
 }
 body h2 {
   font-size: 30px;
@@ -66,6 +67,40 @@ body .cols_2 {
 body .about_me_content {
   float: left;
 }
+body .about_me_content .about_me_text {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+body .about_me_content .about_me_info {
+  overflow: hidden;
+}
+body .about_me_content .about_me_info p {
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+body .about_me_content .about_me_info p span {
+  padding-left: 90px;
+  display: block;
+}
+body .about_me_content .about_me_info p span.span-title {
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-left: 0;
+  float: left;
+}
+body .about_me_content .about_me_info p span.span-icons a {
+  padding-right: 20px;
+  margin-bottom: 5px;
+  min-width: 16px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.4;
+}
 body .about_me_image {
   float: right;
 }
@@ -76,6 +111,10 @@ body .about_me_image img {
 body header ul {
   text-align: right;
   padding-right: 15px;
+  padding-left: 15px;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 20px;
 }
 body header ul li {
   margin: 8px 0 10px 20px;
