added skeleton of portfolio section

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,12 @@ body, header, footer, section, h1, h2, h3, h4, h5, h6, p, ul, li {
   padding: 0;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
   color: #4d4d4d;
 }
@@ -12,9 +18,6 @@ body header, body section, body footer {
   padding: 40px 0;
   width: 100%;
   overflow: hidden;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
 }
 body h1, body h2, body h3, body h4 {
   font-family: "Lato", Helvetica, Arial, sans-serif;
@@ -40,10 +43,23 @@ body h4 {
   font-weight: 700;
   line-height: 1.5;
 }
+body h4.job_title {
+  float: left;
+  margin-right: 10px;
+}
 body p {
   font-size: 16px;
   font-weight: normal;
   line-height: 25px;
+}
+body p.company_name {
+  padding: 3px 0;
+  line-height: 1.5;
+}
+body p.job_description {
+  font-style: italic;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 body ul {
   text-transform: uppercase;
@@ -58,7 +74,7 @@ body hr {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
-  mmargin-top: 20px;
+  margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
   border-top: 1px solid #eeeeee;
@@ -96,7 +112,7 @@ body .cta:hover {
   background-color: #252525;
   color: #ffffff;
 }
-body .cols_33, body .cols_50, body .cols_66, body .content_wrapper, body .row {
+body .cols_33, body .cols_50, body .cols_66, body .cols_100, body .content_wrapper, body .row {
   overflow: hidden;
 }
 body .content_wrapper {
@@ -107,12 +123,12 @@ body .row {
   margin-left: -15px;
   margin-right: -15px;
 }
-body .cols_33, body .cols_50, body .cols_66 {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+body .cols_25, body .cols_33, body .cols_50, body .cols_66, body .cols_100, body .experience_row {
   padding: 0 15px;
   float: left;
+}
+body .cols_25 {
+  width: 25%;
 }
 body .cols_33 {
   width: 33.333333%;
@@ -123,10 +139,10 @@ body .cols_50 {
 body .cols_66 {
   width: 66.666666%;
 }
+body .cols_100 {
+  width: 100%;
+}
 body .about_me_content .about_me_text, body .about_me_content .about_me_info, body .about_me_content .about_me_btns {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   margin-bottom: 20px;
 }
 body .about_me_content .about_me_info {
