worked on portfolio section interactions

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body header, body section, body footer {
   width: 100%;
   overflow: hidden;
 }
-body h1, body h2, body h3, body h4 {
+body h1, body h2, body h3, body h4, body .portfolio_name {
   font-family: "Lato", Helvetica, Arial, sans-serif;
 }
 body p {
@@ -38,12 +38,12 @@ body h2 {
   font-weight: 700;
   line-height: 1.4;
 }
-body h4 {
+body h4, body .portfolio_name {
   font-size: 18px;
   font-weight: 700;
   line-height: 1.5;
 }
-body h4.job_title {
+body h4.job_title, body .portfolio_name.job_title {
   float: left;
   margin-right: 10px;
 }
@@ -64,10 +64,19 @@ body p.job_description {
 body ul {
   text-transform: uppercase;
   font-family: "Lato", Helvetica, Arial, sans-serif;
+  padding-right: 15px;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 20px;
 }
 body ul li {
-  list-style-type: none;
+  margin: 8px 0 10px 20px;
+  cursor: pointer;
+}
+body ul > li {
   display: inline-block;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 body hr {
   -webkit-box-sizing: content-box;
@@ -207,20 +216,57 @@ body .about_me_image .hello_image_holder img {
   width: 100%;
   height: 100%;
 }
+body .cols_25 {
+  position: relative;
+  margin-bottom: 30px;
+}
+body .cols_25 .portfolio_parent {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+body .cols_25 .portfolio_parent .portfolio_img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  float: none;
+  clear: both;
+  -webkit-transition: transform .5s;
+  -moz-transition: transform .5s;
+  -o-transition: transform .5s;
+  transition: transform .5s;
+  background: url("../images/small-fpo.jpg") center center no-repeat;
+}
+body .cols_25:hover .portfolio_img {
+  -webkit-transform: scale(1.5);
+  -moz-transform: scale(1.5);
+  -o-transform: scale(1.5);
+  transform: scale(1.5);
+}
+body .cols_25:hover .portfolio_name span {
+  text-decoration: underline;
+  color: #3333ff;
+}
+body .cols_25 a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 body header ul {
   text-align: right;
-  padding-right: 15px;
-  padding-left: 15px;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 20px;
 }
-body header ul li {
-  margin: 8px 0 10px 20px;
-  cursor: pointer;
+body section#my_portfolio ul {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-body header ul > li {
-  display: inline-block;
-  padding-left: 5px;
-  padding-right: 5px;
+body section#my_portfolio ul li:first-child {
+  margin-left: 0;
+  padding-left: 0;
+}
+body section#my_portfolio ul li.active {
+  color: #3333ff;
 }
