--- a/css/main.scss
+++ b/css/main.scss
@@ -43,7 +43,7 @@ body {
 		overflow: hidden;
 	}
 
-	h1, h2, h3, h4 {
+	h1, h2, h3, h4, .portfolio_name {
 		font-family: $lato;
 	}
 
@@ -63,7 +63,7 @@ body {
 		@include fontsizeweightline (30px, 700, 1.4);
 	}
 
-	h4 {
+	h4, .portfolio_name {
 		@include fontsizeweightline (18px, 700, 1.5);
 
 		&.job_title {
@@ -91,10 +91,19 @@ body {
 		text-transform: uppercase;
 		font-family: $lato;
 
-		li {
-			list-style-type: none;
-			display: inline-block;
-		}
+			padding-right: 15px;
+			@include fontsizeweightline (12px, 700, 20px);
+
+			li {
+				margin: 8px 0 10px 20px;
+				cursor: pointer;
+			}
+
+			& > li{
+				display: inline-block;
+				padding-left: 5px;
+				padding-right: 5px;
+			}
 	}
 
 	hr {
@@ -277,24 +286,92 @@ body {
 		}
 	}
 
+	.cols_25 {
+		
+		position: relative;
+		margin-bottom: 30px;
+		
+		.portfolio_parent {
+			position: relative;
+			width: 100%;
+			height: 300px;
+			overflow: hidden;
+			margin-bottom: 15px;
+
+			.portfolio_img {
+				position: relative;
+				width: 100%;
+				height: 100%;
+				float: none;
+				clear: both;
+				-webkit-transition: transform .5s;
+			  	   -moz-transition: transform .5s;
+			 	     -o-transition: transform .5s;
+			  	        transition: transform .5s;
+			  	        background: url('../images/small-fpo.jpg')center center no-repeat;
+
+			  	&.all {
+			  	 	
+			  	}
+			}
+		}//end portfolio_parent
+
+
+
+		&:hover {
+
+			.portfolio_img {
+
+				-webkit-transform: scale(1.5);
+				   -moz-transform: scale(1.5);
+				     -o-transform: scale(1.5);
+				        transform: scale(1.5);
+			}
+			.portfolio_name {
+
+				span {
+
+					text-decoration: underline;
+					color: #3333ff;
+
+				}
+			}
+		}
+
+		a {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+		
+	}
+
 
 	header {
 
 		ul {
 			text-align: right;
-			padding-right: 15px;
-			padding-left: 15px;
-			@include fontsizeweightline (12px, 700, 20px);
 
+		}
+	}
+
+	section#my_portfolio {
+		ul {
+
+			margin-top: 20px;
+			margin-bottom: 20px;
 			li {
-				margin: 8px 0 10px 20px;
-				cursor: pointer;
-			}
 
-			& > li{
-				display: inline-block;
-				padding-left: 5px;
-				padding-right: 5px;
+				&:first-child {
+					margin-left: 0;
+					padding-left: 0;
+				}
+
+				&.active {
+					color: #3333ff;
+				}
 			}
 		}
 	}
