--- a/css/main.scss
+++ b/css/main.scss
@@ -25,7 +25,77 @@ $roboto: "Roboto", Helvetica, Arial, sans-serif;
 	line: {height:#{$lheight};}
 }
 
-body, header, footer, section, h1, h2, h3, h4, h5, h6, p, ul, li {
+//animmations for filtered categories
+@keyframes zoom-in {
+	0% {
+		transform: scale(.1);
+	}
+
+	100% {
+		transform:none;
+	}
+}
+
+.is-animated {
+	animation: .6s  zoom-in;
+}
+
+//animation for form validation
+@keyframes fadeInUp {
+	0% {
+	    opacity: 0;
+	    transform: translate3d(0px, 100%, 0px);
+	}
+
+	100% {
+	    opacity: 1;
+	    transform: none;
+	}
+ }
+
+ .fadeInUp {
+  	animation-name: fadeInUp;
+  }
+  
+  .animated {
+    animation-duration: .8s;
+    animation-fill-mode: both;
+  }
+
+.box-error {
+	border: 1px solid #cc0000;
+}
+
+.my_error {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 30px;
+	background: #ffffff;
+	display: none;
+	padding-left: 15px;
+	color: #cc0000;
+
+
+	&.active {
+		display: block;
+	}
+}
+
+.no-error {
+
+	position: absolute;
+	left:  0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: #ffffff;
+	display: none;
+}
+
+body, header, footer, section, h1, h2, h3, h4, h5, h6, p, ul, li, form {
 	margin:  0;
 	padding: 0;
 }
@@ -126,13 +196,17 @@ body {
 			}
 	}//end ul
 
+	input, textarea, .my_error {
+		font-family: $lato;
+		@include fontsizeweightline (14px, normal, 1.4);
+	}
+
 	input, textarea {
 		width: 100%;
 		padding-left: 15px;
 		padding-right: 15px;
-		margin-bottom: 30px;
-		font-family: $lato;
-		@include fontsizeweightline (14px, normal, 1.4);
+		margin-bottom: 40px;
+		
 		
 		&[type=submit] {
 
@@ -154,7 +228,7 @@ body {
 
 	textarea {
 
-		height: 130px;
+		height: 140px;
 		padding: 15px 20px;
 	}
 
