Put finishing touches on contact form validation. Worked on Portfloio overlays and open/closing functionality.

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@
   height: 100%;
   text-align: center;
   background: #ffffff;
+  padding-top: 50px;
   display: none;
 }
 .no_error.active {
@@ -63,7 +64,6 @@
 }
 
 .modal {
-  overflow: hidden;
   position: fixed;
   top: 0;
   right: 0;
@@ -129,6 +129,21 @@
 .modal_body {
   padding: 25px;
   overflow: hidden;
+}
+
+.modal_open {
+  overflow: hidden;
+}
+.modal_open .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+#portfolio_modal .modal_body {
+  display: none;
+}
+#portfolio_modal .modal_body.selected {
+  display: block;
 }
 
 body, header, footer, section, h1, h2, h3, h4, h5, h6, p, ul, li, form {
