--- a/css/main.css
+++ b/css/main.css
@@ -456,21 +456,56 @@ body header {
   padding-top: 20px;
   padding-bottom: 20px;
   transition: all .6s;
+  position: fixed;
+  background: #ffffff;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+body header #hamburger {
+  height: auto;
+  float: right;
+  padding: 15px;
+  cursor: pointer;
+  transform: translate(0, 0);
+  display: none;
+}
+body header #hamburger .line-1,
+body header #hamburger .line-2,
+body header #hamburger .line-3 {
+  background-color: blue;
+  height: 4px;
+  width: 40px;
+  margin-bottom: 4px;
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+}
+body header #hamburger .line-1.is-clicked,
+body header #hamburger .line-2.is-clicked,
+body header #hamburger .line-3.is-clicked {
+  background-color: white;
+}
+body header #hamburger .line-1.is-clicked {
+  transform: translateY(8.5px) rotate(45deg);
+  transform-origin: center center;
+}
+body header #hamburger .line-2.is-clicked {
+  transform: translateX(-100%);
+  opacity: 0;
+}
+body header #hamburger .line-3.is-clicked {
+  transform: translateY(-7px) rotate(-45deg);
+  transform-origin: center center;
 }
 body header ul {
   text-align: right;
   padding-right: 0;
 }
 body header.sticky {
-  position: fixed;
-  background: #ffffff;
-  top: 0;
-  left: 0;
-  z-index: 1000;
   box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.2);
 }
-body header.sticky + section#my_hello {
-  padding-top: 83px;
+body header + section#my_hello {
+  padding-top: 103px;
 }
 body section#my_portfolio ul {
   margin-top: 20px;
