--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,16 @@
   display: block;
 }
 
+.no_wrap {
+  white-space: nowrap;
+}
+
+.zig_zag {
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+}
+
 .modal {
   position: fixed;
   top: 0;
@@ -83,15 +93,6 @@
   -o-transition: opacity 0.2s ease-in;
   transition: opacity 0.2s ease-in;
 }
-.modal.fade .modal_dialog {
-  -webkit-transition: transform 2s ease-in-out;
-  -moz-transition: transform 2s ease-in-out;
-  -o-transition: transform 2s ease-in-out;
-  transition: transform 2s ease-in-out;
-  width: 900px;
-  margin: 30px auto;
-  position: relative;
-}
 .modal.fade .modal_center {
   -webkit-transform: translateY(-75%);
   -moz-transform: translateY(-75%);
@@ -101,21 +102,33 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+.modal.fade .modal_dialog {
+  -webkit-transition: transform 0.3s ease-in-out;
+  -moz-transition: transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  width: 900px;
+  margin: 30px auto;
+  position: relative;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
 .modal.in {
   opacity: 1;
   display: block;
-}
-.modal.in .modal_dialog {
-  -webkit-transform: translate(0, 0);
-  -moz-transform: translate(0, 0);
-  -o-transform: translate(0, 0);
-  transform: translate(0, 0);
 }
 .modal.in .modal_center {
   -webkit-transform: translateY(-50%) !important;
   -moz-transform: translateY(-50%) !important;
   -o-transform: translateY(-50%) !important;
   transform: translateY(-50%) !important;
+}
+.modal.in .modal_dialog {
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  transform: translate(0, 0);
 }
 
 .modal_content {
@@ -254,6 +267,7 @@ body input, body textarea {
   padding-left: 15px;
   padding-right: 15px;
   margin-bottom: 40px;
+  transform: perspective(1px);
 }
 body input[type=submit], body textarea[type=submit] {
   width: 0;
@@ -271,7 +285,7 @@ body textarea {
   height: 140px;
   padding: 15px 20px;
 }
-body hr {
+body hr, body hr.mobile_hr {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -279,7 +293,10 @@ body hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid #e3e3e3;
+}
+body hr.mobile_hr {
+  display: none;
 }
 body .section {
   border-top: 1px solid #e3e3e3;
@@ -314,7 +331,7 @@ body .cta:hover {
   background-color: #252525;
   color: #ffffff;
 }
-body form, body .element_wrapper {
+body form, body .element_wrapper, body .row {
   position: relative;
 }
 body .cols_33, body .cols_50, body .cols_66, body .cols_100, body .content_wrapper, body .row, body .element_wrapper {
@@ -346,6 +363,9 @@ body .cols_66 {
 }
 body .cols_100 {
   width: 100%;
+}
+body .about_me_content {
+  float: left;
 }
 body .about_me_content .about_me_text, body .about_me_content .about_me_info, body .about_me_content .about_me_btns {
   margin-bottom: 20px;
@@ -402,6 +422,9 @@ body .about_me_content .about_me_info p span.span_icons a.my_github:hover {
   background: url("../images/icons8-github-hover.png") top left no-repeat;
   background-size: contain;
 }
+body .about_me_image {
+  float: right;
+}
 body .about_me_image .hello_image_holder {
   position: relative;
   padding-bottom: 56.2%;
@@ -419,21 +442,22 @@ body .cols_25 {
 body .cols_25 .portfolio_parent {
   position: relative;
   width: 100%;
-  height: 300px;
   overflow: hidden;
   margin-bottom: 15px;
 }
 body .cols_25 .portfolio_parent .portfolio_img {
   position: relative;
   width: 100%;
-  height: 100%;
   float: none;
   clear: both;
   -webkit-transition: transform .5s;
   -moz-transition: transform .5s;
   -o-transition: transform .5s;
   transition: transform .5s;
-  background: url("../images/small-fpo.jpg") center center no-repeat;
+}
+body .cols_25 .portfolio_parent .portfolio_img img {
+  width: 100%;
+  height: auto;
 }
 body .cols_25:hover .portfolio_img {
   -webkit-transform: scale(1.5);
@@ -475,7 +499,7 @@ body header #hamburger .line-2,
 body header #hamburger .line-3 {
   background-color: blue;
   height: 4px;
-  width: 40px;
+  width: 24px;
   margin-bottom: 4px;
   border-radius: 10px;
   transition: all 0.3s ease-in-out;
@@ -508,6 +532,7 @@ body header + section#my_hello {
   padding-top: 103px;
 }
 body section#my_portfolio ul {
+  overflow: auto;
   margin-top: 20px;
   margin-bottom: 20px;
 }
