--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,3 +48,81 @@
     background-color: blue;
   }
 }
+@media only screen and (max-width: 940px) {
+  body h1 {
+    font-size: 30px;
+    margin-top: 30px;
+  }
+  body h2 {
+    font-size: 24px;
+  }
+  body p {
+    font-size: 14px;
+    line-height: 1.4;
+  }
+  body .clear {
+    clear: both;
+  }
+  body .cols_33, body .cols_50, body .cols_66 {
+    width: 100%;
+  }
+  body .cols_66 .cols_50, body .cols_66 .experience_row {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  body .cols_66 .cols_50 hr.mobile_hr, body .cols_66 .experience_row hr.mobile_hr {
+    display: block;
+  }
+  body .cols_66 .cols_50:first-child, body .cols_66 .experience_row:first-child {
+    padding: 20px 0;
+    padding-bottom: 0;
+  }
+  body .cols_25 {
+    width: 50%;
+  }
+
+  .modal.fade .modal_center {
+    top: 0;
+  }
+  .modal.fade .modal_dialog {
+    width: 100%;
+  }
+  .modal.in .modal_center {
+    transform: translateY(0) !important;
+    margin-top: 0;
+  }
+
+  .modal_body {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  section#my_hello .about_me_content, section#my_hello .about_me_image {
+    width: 100% !important;
+  }
+  section#my_hello .about_me_image {
+    float: none;
+  }
+}
+@media only screen and (max-width: 480px) {
+  body .cta {
+    min-width: 100%;
+  }
+  body .cta + .cta {
+    margin-top: 15px;
+  }
+  body input.cta.blue {
+    margin-bottom: 0;
+  }
+  body input, body textarea {
+    transform: perspective(0);
+  }
+  body .cols_25 {
+    width: 100%;
+  }
+
+  .modal_body {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
