--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,10 @@
   padding: 25px;
   overflow: hidden;
 }
+.modal_body img {
+  display: block;
+  margin: 0 auto 30px auto;
+}
 
 .modal_open {
   overflow: hidden;
@@ -199,12 +203,12 @@ body h2 {
   font-weight: 700;
   line-height: 1.4;
 }
-body h4, body .portfolio_name {
+body h4 {
   font-size: 18px;
   font-weight: 700;
   line-height: 1.5;
 }
-body h4.job_title, body .portfolio_name.job_title {
+body h4.title {
   float: left;
   margin-right: 10px;
 }
@@ -217,7 +221,7 @@ body p.company_name {
   padding: 3px 0;
   line-height: 1.5;
 }
-body p.job_description {
+body p.description {
   font-style: italic;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -439,6 +443,9 @@ body .cols_25 {
   position: relative;
   margin-bottom: 30px;
 }
+body .cols_25 p {
+  font-size: 15px;
+}
 body .cols_25 .portfolio_parent {
   position: relative;
   width: 100%;
@@ -448,18 +455,27 @@ body .cols_25 .portfolio_parent {
 body .cols_25 .portfolio_parent .portfolio_img {
   position: relative;
   width: 100%;
-  float: none;
-  clear: both;
-  -webkit-transition: transform .5s;
-  -moz-transition: transform .5s;
-  -o-transition: transform .5s;
-  transition: transform .5s;
+  margin: 0;
+  overflow: hidden;
+  border-radius: 2px;
 }
 body .cols_25 .portfolio_parent .portfolio_img img {
   width: 100%;
   height: auto;
+  border-radius: 2px;
+  vertical-align: middle;
+  -webkit-transition: all .5s ease;
+  -moz-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
 }
-body .cols_25:hover .portfolio_img {
+body .cols_25 .portfolio_type p {
+  margin-top: 10px;
+}
+body .cols_25 .portfolio_type p + P {
+  margin-top: 0;
+}
+body .cols_25:hover .portfolio_img img {
   -webkit-transform: scale(1.5);
   -moz-transform: scale(1.5);
   -o-transform: scale(1.5);
