--- a/css/main.scss
+++ b/css/main.scss
@@ -177,6 +177,11 @@ $roboto: "Roboto", Helvetica, Arial, sans-serif;
 .modal_body {
 	padding: 25px;
 	overflow: hidden;
+
+	img {
+		display: block;
+		margin: 0 auto 30px auto;
+	}
 }
 
 .modal_open {
@@ -234,10 +239,10 @@ body {
 		@include fontsizeweightline (30px, 700, 1.4);
 	}
 
-	h4, .portfolio_name {
+	h4 {
 		@include fontsizeweightline (18px, 700, 1.5);
 
-		&.job_title {
+		&.title {
 			float: left;
 			margin-right: 10px;
 		}
@@ -251,7 +256,7 @@ body {
 			line-height: 1.5;
 		}
 
-		&.job_description {
+		&.description {
 			font-style: italic;
 			margin-top: 10px;
 			margin-bottom: 10px;
@@ -529,6 +534,10 @@ body {
 		
 		position: relative;
 		margin-bottom: 30px;
+
+		p {
+			font-size: 15px;
+		}
 		
 		.portfolio_parent {
 			position: relative;
@@ -539,20 +548,37 @@ body {
 			.portfolio_img {
 				position: relative;
 				width: 100%;
-				float: none;
-				clear: both;
-				-webkit-transition: transform .5s;
-			  	   -moz-transition: transform .5s;
-			 	     -o-transition: transform .5s;
-			  	        transition: transform .5s;
+				margin: 0;
+				overflow: hidden;
+				border-radius: 2px;
 
-			  	img {width: 100%; height: auto;}
-
-			  	&.all {
-			  	 	
+			  	img {
+			  		width: 100%; 
+			  		height: auto;
+			  		border-radius: 2px;
+			  		vertical-align: middle;
+			  		-webkit-transition: all .5s ease;
+			  	       -moz-transition: all .5s ease;
+			 	         -o-transition: all .5s ease;
+			  	            transition: all .5s ease;
 			  	}
+
 			}
 		}//end portfolio_parent
+
+		.portfolio_type {
+
+			p {
+
+				margin-top: 10px;
+
+				& + P {
+
+
+					margin-top: 0;
+				}
+			}
+		}
 
 
 
@@ -560,10 +586,12 @@ body {
 
 			.portfolio_img {
 
+				img {
 				-webkit-transform: scale(1.5);
 				   -moz-transform: scale(1.5);
 				     -o-transform: scale(1.5);
 				        transform: scale(1.5);
+				       }
 			}
 			.portfolio_name {
 
