added about us to portfolio and a few other projects

--- a/css/main.scss
+++ b/css/main.scss
@@ -84,12 +84,17 @@ $roboto: "Roboto", Helvetica, Arial, sans-serif;
 	padding-left: 15px;
 	color: #cc0000;
 
-
 	&.active {
 		display: block;
 	}
 }
 
+.super {
+	font-size: .7em;
+	line-height: 0;
+	vertical-align: .4em;
+
+}
 .no_error {
 
 	position: absolute;
