--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,12 @@
   display: block;
 }
 
+.super {
+  font-size: .7em;
+  line-height: 0;
+  vertical-align: .4em;
+}
+
 .no_error {
   position: absolute;
   left: 0;
