--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,7 @@ body header, body section, body footer {
 body h1, body h2, body h3, body h4, body .portfolio_name {
   font-family: "Lato", Helvetica, Arial, sans-serif;
 }
-body p {
+body p, body ul.columns {
   font-family: "Roboto", Helvetica, Arial, sans-serif;
 }
 body h1, body h4 {
@@ -218,33 +218,32 @@ body h4.title {
   float: left;
   margin-right: 10px;
 }
-body p {
+body p, body ul.columns {
   font-size: 16px;
   font-weight: normal;
   line-height: 25px;
 }
-body p.company_name {
+body p.company_name, body ul.columns.company_name {
   padding: 3px 0;
   line-height: 1.5;
 }
-body p.description {
+body p.description, body ul.columns.description {
   font-style: italic;
   margin-top: 10px;
   margin-bottom: 10px;
 }
-body ul {
+body ul.special {
   text-transform: uppercase;
   font-family: "Lato", Helvetica, Arial, sans-serif;
-  padding-right: 15px;
   font-size: 12px;
   font-weight: 700;
   line-height: 20px;
 }
-body ul li {
+body ul.special li {
   margin: 8px 0 10px 20px;
   cursor: pointer;
 }
-body ul li span.cool-link::after, body ul li span.cool-link:hover::after {
+body ul.special li span.cool-link::after, body ul.special li span.cool-link:hover::after {
   content: '';
   display: block;
   width: 0;
@@ -258,10 +257,10 @@ body ul li span.cool-link::after, body ul li span.cool-link:hover::after {
   -o-transition: width 0.3s;
   transition: width 0.3s;
 }
-body ul li span:hover.cool-link::after {
+body ul.special li span:hover.cool-link::after {
   width: 100%;
 }
-body ul > li {
+body ul.special > li {
   display: inline-block;
   padding-left: 5px;
   padding-right: 5px;
@@ -277,7 +276,6 @@ body input, body textarea {
   padding-left: 15px;
   padding-right: 15px;
   margin-bottom: 40px;
-  transform: perspective(1px);
 }
 body input[type=submit], body textarea[type=submit] {
   width: 0;
@@ -543,7 +541,7 @@ body header #hamburger .line-3.is-clicked {
   transform: translateY(-7px) rotate(-45deg);
   transform-origin: center center;
 }
-body header ul {
+body header ul#topnav {
   text-align: right;
   padding-right: 0;
 }
@@ -553,15 +551,24 @@ body header.sticky {
 body header + section#my_hello {
   padding-top: 103px;
 }
-body section#my_portfolio ul {
+body section#my_experience ul.columns {
+  padding-left: 17px;
+  -moz-column-count: 2;
+  -moz-column-gap: 2.5em;
+  -webkit-column-count: 2;
+  -webkit-column-gap: 2.5em;
+  column-count: 2;
+  column-gap: 2.5em;
+}
+body section#my_portfolio ul.special {
   overflow: auto;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-body section#my_portfolio ul li:first-child {
+body section#my_portfolio ul.special li:first-child {
   margin-left: 0;
   padding-left: 0;
 }
-body section#my_portfolio ul li.active {
+body section#my_portfolio ul.special li.active {
   color: #3333ff;
 }
