--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,15 +7,23 @@
   body .content_wrapper {
     width: 100%;
   }
-  body header ul {
+  body .cols_25 {
+    min-height: 425px;
+  }
+  body header ul.triggernav {
     padding-right: 15px;
+  }
+}
+@media only screen and (max-width: 1075px) {
+  body .cols_25 {
+    min-height: 360px;
   }
 }
 @media only screen and (max-width: 990px) {
   body header #hamburger {
     display: block;
   }
-  body header ul {
+  body header ul#topnav {
     display: none;
     width: 100%;
     text-align: center;
@@ -29,10 +37,10 @@
     -o-transform: translateY(-100%);
     transform: translateY(-100%);
   }
-  body header ul li {
+  body header ul#topnav li {
     display: block;
   }
-  body header ul.ulanimated {
+  body header ul#topnav.ulanimated {
     display: block;
     color: #ffffff;
     -webkit-transform: translateY(0);
