--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -6,16 +6,26 @@
 			margin-right: 0;
 		}
 		.content_wrapper {
-
 			width:  100%;
+		}
+
+		.cols_25 {
+			min-height: 425px;
 		}
 		header {
 
-			ul {padding-right: 15px;}
+			ul.triggernav {padding-right: 15px;}
 		}
 	}
 }
 
+@media only screen and (max-width: 1075px) { 
+	body {
+		.cols_25 {
+			min-height: 360px;
+		}
+	}
+}
 @media only screen and (max-width: 990px) { 
 	body {
 
@@ -23,7 +33,7 @@
 
 			#hamburger {display: block;}
 			
-			ul {
+			ul#topnav {
 				display: none;
 				width: 100%;
 				text-align: center;
